<resources>
    <string name="app_name">Smart Ring App</string>
    <string name="title_locations">Locations</string>
    <string name="title_commands">Commands</string>
    <string name="title_device">Device</string>
    <string name="title_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Categories -->
    <string name="category_main">Main</string>

    <!-- Theme Preferences -->
    <string name="dark_mode">Dark mode</string>

    <!-- Sync Preferences -->
    <string name="device_settings">Device settings</string>
    <string name="delay_between_clicks">Delay between clicks</string>
    <string name="long_press_duration">Long press duration</string>
    <string name="long_press">Long Press</string>
    <string name="triple_click">Triple Click</string>
    <string name="double_click">Double Click</string>
    <string name="single_click">Single Click</string>
    <string name="used_actions">Used actions</string>
    <string name="device_connected">connected</string>
    <string name="smart_ring">Smart Ring</string>
    <string name="disconnect_device">Disconnect device</string>
    <string name="title_activity_add_location">Add new location</string>
    <string name="location_info">Location Info</string>
    <string name="name">Name</string>
    <string name="actions">Actions</string>
    <string name="background">Background</string>
    <string name="geoposition">Geoposition</string>
    <string name="input_helper_location_geoposition">Where location is situated</string>
    <string name="input_helper_location_name">Name of the location</string>
    <string name="format_commands_count">%d commands</string>
    <string name="location_background_image">Background image</string>
    <string name="location_bg_picker_title">Choose location background</string>
    <string name="title_activity_mapsmapsmaps">Location geoposition</string>
    <string name="location_radius">Radius: %dm</string>
    <string name="unknown_address">Unknown place</string>
    <string name="choose_location">Choose location geoposition</string>
    <string name="location_geolocation_picker_title">Choose geolocation</string>
    <string name="ok">OK</string>
    <string name="permission_denied">App won\'t work without location permission</string>
    <string name="current_location">Current location</string>
    <string name="google_maps_location_link" translatable="false">http://www.google.com/maps/place/</string>
    <string name="title_activity_add_command">Add new command</string>
    <string name="command_icon">Command icon</string>
    <string name="action_info">Action info</string>
    <string name="input_helper_action_name">Action name</string>
    <string name="description">Description</string>
    <string name="input_helper_action_description">Action description</string>
    <string name="action_type">Action type</string>
    <string name="input_helper_action_phone">Phone where alert is sent</string>
    <string name="phone_number">Phone number</string>
    <string name="command_icon_picker_title">Choose command icon</string>
    <string name="device_address">Device Bluetooth address</string>
    <string name="select_device_dialog_title">Select device</string>
    <string name="unknown_device">Unknown device</string>
    <string name="app_wont_work_without_permissions">App won\'t work without required permissions</string>
    <string name="app_wont_work_if_bluetooth_and_location_are_disabled">App won\'t work if Bluetooth and Location are disabled</string>
</resources>
