<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/category_main">

        <!--TODO ITS TEMPORARY: SHOW SELECT DEVICE DIALOG ON PREFERENCE CLICK AND REMOVE DEFAULT VALUE-->
        <EditTextPreference
            android:defaultValue="Default value"
            android:key="device_address"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/device_address"
            app:defaultValue="Smart Ring"
            app:icon="@drawable/ic_bluetooth_24dp"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:icon="@drawable/ic_theme_24dp"
            app:key="dark_mode"
            app:title="@string/dark_mode" />
    </PreferenceCategory>
</PreferenceScreen>
