<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_location">

    <fragment
        android:id="@+id/navigation_location"
        android:name="ru.sc222.smartringapp.ui.fragments.LocationsFragment"
        android:label="@string/title_locations"
        tools:layout="@layout/fragment_locations" />

    <fragment
        android:id="@+id/navigation_commands"
        android:name="ru.sc222.smartringapp.ui.fragments.CommandsFragment"
        android:label="@string/title_commands"
        tools:layout="@layout/fragment_commands" />

    <fragment
        android:id="@+id/navigation_device"
        android:name="ru.sc222.smartringapp.ui.fragments.DeviceFragment"
        android:label="@string/title_device"
        tools:layout="@layout/fragment_device" />
</navigation>