<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:theme="@style/ToolbarWhiteBg">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@color/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="?actionBarSize">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/card_horizontal_margin"
                android:layout_marginTop="@dimen/card_vertical_margin"
                android:layout_marginBottom="@dimen/card_vertical_margin"
                android:layout_marginRight="@dimen/card_horizontal_margin"
                app:cardCornerRadius="15dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/card_horizontal_padding"
                    android:paddingTop="@dimen/card_vertical_padding"
                    android:paddingRight="@dimen/card_horizontal_padding"
                    android:paddingBottom="@dimen/card_vertical_padding">


                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/action_info"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/colorAccent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_field_name"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="@string/name"
                        app:helperText="@string/input_helper_action_name">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_field_description"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/description"
                        app:helperText="@string/input_helper_action_description">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/location_bg"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/drop_down_menu_border_usual"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:text="@string/command_icon"
                            android:layout_weight="1"
                            android:paddingLeft="12dp"
                            android:paddingStart="12dp"
                            android:paddingTop="12dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:paddingBottom="12dp"
                            android:gravity="start|center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>
                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_weight="0"
                            android:id="@+id/command_selected_icon"
                            android:layout_width="58dp"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/ic_action_kettle"
                            android:padding="5dp"
                            android:layout_height="58dp"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/card_vertical_padding">

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:background="@drawable/drop_down_menu_border_usual"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/spinner_action_type"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:paddingLeft="4dp"
                                android:paddingTop="12dp"
                                android:paddingRight="4dp"
                                android:paddingBottom="12dp"
                                android:spinnerMode="dropdown"
                                tools:listitem="@android:layout/simple_spinner_item" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="9dp"
                            android:layout_marginStart="9dp"
                            android:layout_marginTop="-4dp"
                            android:background="@android:color/background_light"
                            android:paddingLeft="3dp"
                            android:paddingRight="3dp"
                            android:text="@string/action_type"
                            android:textColor="@color/light_gray"
                            android:textSize="12sp" />
                    </RelativeLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_field_phone"
                        android:visibility="gone"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/phone_number"
                        app:helperText="@string/input_helper_action_phone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_input_phone"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:ellipsize="end"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_ok_24dp"
        android:tint="@android:color/white" />
    <!--todo !!! turn on vectordrawable compat in gradle-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>